crates/pg_syntax/tests/snapshots/postgres_regress/subselect@82.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select f1, ss1 as relabel from\n    (select *, (select sum(f1) from int4_tbl b where f1 >= a.f1) as ss1\n     from int4_tbl a) ss;"
---
SelectStmt@0..128
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..25
    ColumnRef@11..14
      Ident@11..14 "ss1"
    Whitespace@14..15 " "
    As@15..17 "as"
    Whitespace@17..18 " "
    Ident@18..25 "relabel"
  Whitespace@25..26 " "
  From@26..30 "from"
  Newline@30..31 "\n"
  Whitespace@31..35 "    "
  Ascii40@35..36 "("
  RangeSubselect@36..127
    SelectStmt@36..123
      Select@36..42 "select"
      Whitespace@42..43 " "
      ResTarget@43..44
        ColumnRef@43..44
          AStar@43..44
            Ascii42@43..44 "*"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      ResTarget@46..102
        SubLink@46..94
          SelectStmt@46..94
            Ascii40@46..47 "("
            Select@47..53 "select"
            Whitespace@53..54 " "
            ResTarget@54..60
              FuncCall@54..60
                Ident@54..57 "sum"
                Ascii40@57..58 "("
                ColumnRef@58..60
                  Ident@58..60 "f1"
            Ascii41@60..61 ")"
            Whitespace@61..62 " "
            From@62..66 "from"
            Whitespace@66..67 " "
            RangeVar@67..77
              Ident@67..75 "int4_tbl"
              Whitespace@75..76 " "
              Alias@76..77
                Ident@76..77 "b"
            Whitespace@77..78 " "
            Where@78..83 "where"
            Whitespace@83..84 " "
            AExpr@84..94
              ColumnRef@84..86
                Ident@84..86 "f1"
              Whitespace@86..87 " "
              GreaterEquals@87..89 ">="
              Whitespace@89..90 " "
              ColumnRef@90..94
                Ident@90..91 "a"
                Ascii46@91..92 "."
                Ident@92..94 "f1"
        Ascii41@94..95 ")"
        Whitespace@95..96 " "
        As@96..98 "as"
        Whitespace@98..99 " "
        Ident@99..102 "ss1"
      Newline@102..103 "\n"
      Whitespace@103..108 "     "
      From@108..112 "from"
      Whitespace@112..113 " "
      RangeVar@113..123
        Ident@113..121 "int4_tbl"
        Whitespace@121..122 " "
        Alias@122..123
          Ident@122..123 "a"
    Ascii41@123..124 ")"
    Whitespace@124..125 " "
    Alias@125..127
      Ident@125..127 "ss"
  Ascii59@127..128 ";"

