crates/pg_syntax/tests/snapshots/postgres_regress/subselect@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into float_table values (1), (2), (3);"
---
InsertStmt@0..45
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "float_table"
  Whitespace@23..24 " "
  SelectStmt@24..43
    Values@24..30 "values"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..33
      AConst@32..33
        Iconst@32..33 "1"
    Ascii41@33..34 ")"
    Ascii44@34..35 ","
    Whitespace@35..36 " "
    Ascii40@36..37 "("
    List@37..38
      AConst@37..38
        Iconst@37..38 "2"
    Ascii41@38..39 ")"
    Ascii44@39..40 ","
    Whitespace@40..41 " "
    Ascii40@41..42 "("
    List@42..43
      AConst@42..43
        Iconst@42..43 "3"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

