crates/pg_syntax/tests/snapshots/postgres_regress/subselect@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT (((SELECT 2)) UNION SELECT 2);
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    SubLink@7..35
      SelectStmt@7..35
        SelectStmt@7..18
          Ascii40@7..8 "("
          Ascii40@8..9 "("
          Ascii40@9..10 "("
          Select@10..16 "SELECT"
          Whitespace@16..17 " "
          ResTarget@17..18
            AConst@17..18
              Iconst@17..18 "2"
        Ascii41@18..19 ")"
        Ascii41@19..20 ")"
        Whitespace@20..21 " "
        Union@21..26 "UNION"
        Whitespace@26..27 " "
        Select@27..33 "SELECT"
        Whitespace@33..34 " "
        SelectStmt@34..35
          ResTarget@34..35
            AConst@34..35
              Iconst@34..35 "2"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

